--- a/adapters/brewer-web/src/main/resources/templates/beers/beer-registration.html
+++ b/adapters/brewer-web/src/main/resources/templates/beers/beer-registration.html
@@ -1,26 +1,239 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello, Thymeleaf!</h1>
-</body>
+<html lang="en">
 
-<div data-th-each="error : ${#fields.detailedErrors('${beerRegistrationModel.*}')}">
-    <span data-th-text="${error.message}">Dummy error message</span>
+<head>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+  <title>Brewer!</title>
+
+  <!--  <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css">-->
+  <!--  <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap-theme.min.css">-->
+  <link rel="stylesheet" href="/layout/stylesheets/vendors.min.css">
+  <link rel="stylesheet" href="/layout/stylesheets/algaworks.min.css">
+  <link rel="stylesheet" href="/layout/stylesheets/application.css">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+</head>
+
+<body>
+<div class="aw-layout-page">
+  <nav id="_main-navbar" class="navbar  navbar-default  navbar-fixed-top  js-sticky-reference">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand  hidden-xs" href="#">
+          <img alt="Brewer!" src="/images/logo.png">
+        </a>
+
+        <ul class="nav  navbar-nav">
+          <li>
+            <a href="#" class="js-sidebar-toggle">
+              <span class="fa  fa-bars"></span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <ul class="nav  navbar-nav  navbar-right">
+        <li>
+          <a href="#"><em class="fa  fa-sign-out"></em></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <aside class="aw-layout-sidebar  js-sidebar">
+    <div class="aw-menu__content">
+      <nav class="aw-menu  js-menu">
+        <ul class="aw-menu__list">
+          <li class="aw-menu__item">
+            <a href="#">
+              <span class="fa  fa-fw  fa-home"></span><span>Dummy Item A</span>
+            </a>
+          </li>
+
+          <li class="aw-menu__item  is-active">
+            <a href="#">
+              <span class="fa  fa-fw  fa-file-text"></span><span>Dummy Item B</span>
+              <span class="aw-menu__navigation-icon  fa"></span>
+            </a>
+
+            <ul class="aw-menu__list  aw-menu__list--sublist">
+              <li class="aw-menu__item  aw-menu__item--link">
+                <a href="#">Dummy Sub Item A</a>
+              </li>
+              <li class="aw-menu__item  aw-menu__item--link  is-active">
+                <a href="#">Dummy Sub Item B</a>
+              </li>
+              <li class="aw-menu__item  aw-menu__item--link">
+                <a href="#">Dummy Sub Item C</a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="aw-menu__item  is-expanded">
+            <a href="#">
+              <span class="fa  fa-fw  fa-file-text"></span><span>Dummy Item C</span>
+              <span class="aw-menu__navigation-icon  fa"></span>
+            </a>
+
+            <ul class="aw-menu__list  aw-menu__list--sublist">
+              <li class="aw-menu__item  aw-menu__item--link">
+                <a href="#">Dummy Sub Item A</a>
+              </li>
+              <li class="aw-menu__item  aw-menu__item--link">
+                <a href="#">Dummy Sub Item B</a>
+              </li>
+              <li class="aw-menu__item  aw-menu__item--link">
+                <a href="#">Dummy Sub Item C</a>
+              </li>
+              <li class="aw-menu__item  aw-menu__item--link">
+                <a href="#">Dummy 403 Page</a>
+              </li>
+              <li class="aw-menu__item  aw-menu__item--link">
+                <a href="#">Dummy 404 Page</a>
+              </li>
+              <li class="aw-menu__item  aw-menu__item--link">
+                <a href="#">Dummy 500 Page</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </aside>
+
+  <section class="aw-layout-content  js-content">
+    <div class="page-header">
+      <div class="container-fluid">
+        <h1>Beer Registration</h1>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+
+      <div class="alert  alert-danger" role="alert" data-th-if="${#fields.hasErrors('${beerRegistrationModel.*}')}">
+        <div data-th-each="error : ${#fields.detailedErrors('${beerRegistrationModel.*}')}">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span data-th-text="${error.message}">Dummy error message</span>
+        </div>
+      </div>
+
+      <form method="post" data-th-object="${beerRegistrationModel}">
+        <div class="row">
+          <div class="col-sm-2  form-group">
+            <label for="_sku">SKU</label>
+            <input id="_sku" class="form-control" type="text" data-th-field="*{sku}"/>
+          </div>
+
+          <div class="col-sm-10  form-group">
+            <label for="_name">Name</label>
+            <input id="_name" class="form-control" type="text" data-th-field="*{name}"/>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="_description">Description</label>
+          <textarea id="_description" class="form-control" rows="1" data-th-maxlength="*{descriptionMaxLength}"
+                    data-th-field="*{description}">
+          </textarea>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-3  form-group">
+            <label for="_type">Type</label>
+            <select id="_type" class="form-control" name="type">
+              <option value="" data-th-disabled="disabled" data-th-selected="selected">Select type...</option>
+              <option data-th-each="type : ${types}" data-th-value="${type.id}"
+                      data-th-text="${type.name}">Dummy type name
+              </option>
+            </select>
+          </div>
+
+          <div class="col-sm-3  form-group">
+            <label for="_flavor">Flavor</label>
+            <select id="_flavor" class="form-control" name="type">
+              <option value="" data-th-disabled="disabled" data-th-selected="selected">Select flavor...</option>
+              <option data-th-each="flavor : ${flavors}" data-th-value="${flavor.id}"
+                      data-th-text="${type.name}">Dummy flavor name
+              </option>
+            </select>
+          </div>
+
+          <div class="col-sm-3  form-group">
+            <label for="_alcohol-content">Alcohol Content</label>
+            <div class="input-group">
+              <input id="_alcohol-content" class="form-control  js-decimal" type="text"
+                     data-th-field="*{alcoholContent}"
+              />
+              <div class="input-group-addon">%</div>
+            </div>
+          </div>
+
+          <div class="col-lg-3  col-sm-6  form-group">
+            <label class="control-label">Origin</label>
+            <div>
+              <!--/*/ <th:block data-th-each="origin : ${origins}"> /*/-->
+                <div class="radio  radio-inline">
+                  <input data-th-id="|_origin-${#strings.toLowerCase(origin)}|" type="radio" data-th-value="${origin}"
+                         data-th-field="*{origin}"
+                  />
+                  <label data-th-for="|_origin-${#strings.toLowerCase(origin)}|" data-th-text="${origin}">
+                    Dummy Label
+                  </label>
+                </div>
+              <!--/*/ </th:block> /*/-->
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-3  form-group">
+            <label for="_unit-price">Unit Price</label>
+            <div class="input-group">
+              <div class="input-group-addon">$</div>
+              <input id="_unit-price" class="form-control  js-decimal" type="text" data-th-field="*{unitPrice}"/>
+            </div>
+          </div>
+
+          <div class="col-sm-3  form-group">
+            <label for="_commission">Commission</label>
+            <div class="input-group">
+              <input id="_commission" class="form-control  js-decimal" type="text" data-th-field="*{commission}"/>
+              <div class="input-group-addon">%</div>
+            </div>
+          </div>
+
+          <div class="col-sm-3  form-group">
+            <label for="_stock">Stock</label>
+            <input id="_stock" class="form-control  js-integer" type="text" data-th-field="*{stock}"/>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <button class="btn  btn-primary" type="submit">Save</button>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <footer class="aw-layout-footer  js-content">
+    <div class="container-fluid">
+      <span class="aw-footer-disclaimer">&copy; 2020 Brewer. All rights reserved.</span>
+    </div>
+  </footer>
 </div>
 
-<form method="post" data-th-object="${beerRegistrationModel}">
-    <label for="_sku">SKU</label>
-    <input id="_sku" type="text" data-th-field="*{sku}"/>
-    <br>
-
-    <label for="_name">Name</label>
-    <input id="_name" type="text" data-th-field="*{name}"/>
-    <br>
-
-    <label for="_description">Description</label>
-    <textarea id="_description" rows="4" cols="35" data-th-maxlength="*{descriptionMaxLength}" data-th-field="*{description}"></textarea>
-    <br>
-
-    <input type="submit" value="Save">
-</form>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
+<!--<script>window.jQuery || document.write('<script src="/webjars/jquery/jquery.min.js"><\/script>')</script>-->
+<!--<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>-->
+<script src="/layout/javascripts/vendors.min.js"></script>
+<script src="/layout/javascripts/algaworks.min.js"></script>
+</body>
 </html>
