--- a/adapters/brewer-web/src/main/resources/templates/layout/default-layout.html
+++ b/adapters/brewer-web/src/main/resources/templates/layout/default-layout.html
@@ -11,9 +11,9 @@
 
   <!--  <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css">-->
   <!--  <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap-theme.min.css">-->
-  <link rel="stylesheet" href="/layout/stylesheets/vendors.min.css">
-  <link rel="stylesheet" href="/layout/stylesheets/algaworks.min.css">
-  <link rel="stylesheet" href="/layout/stylesheets/application.css">
+  <link rel="stylesheet" data-th-href="@{/layout/stylesheets/vendors.min.css}">
+  <link rel="stylesheet" data-th-href="@{/layout/stylesheets/algaworks.min.css}">
+  <link rel="stylesheet" data-th-href="@{/layout/stylesheets/application.css}">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -29,7 +29,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand  hidden-xs" href="#">
-          <img alt="Brewer!" src="/images/logo.png">
+          <img alt="Brewer!" data-th-src="@{/images/logo.png}">
         </a>
 
         <ul class="nav  navbar-nav">
@@ -122,7 +122,7 @@
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
 <!--<script>window.jQuery || document.write('<script src="/webjars/jquery/jquery.min.js"><\/script>')</script>-->
 <!--<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>-->
-<script src="/layout/javascripts/vendors.min.js"></script>
-<script src="/layout/javascripts/algaworks.min.js"></script>
+<script data-th-src="@{/layout/javascripts/vendors.min.js}"></script>
+<script data-th-src="@{/layout/javascripts/algaworks.min.js}"></script>
 </body>
 </html>
