#15 Configurando mascara de dinheiro com jQuery

--- a/adapters/brewer-web/src/main/resources/templates/layout/default-layout.html
+++ b/adapters/brewer-web/src/main/resources/templates/layout/default-layout.html
@@ -124,5 +124,7 @@
 <!--<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>-->
 <script data-th-src="@{/layout/javascripts/vendors.min.js}"></script>
 <script data-th-src="@{/layout/javascripts/algaworks.min.js}"></script>
+<script data-th-src="@{/javascripts/vendors/jquery.maskMoney.min.js}"></script>
+<script data-th-src="@{/javascripts/brewer.js}"></script>
 </body>
 </html>
