--- a/adapters/brewer-web/src/main/resources/templates/beers/beer-registration.html
+++ b/adapters/brewer-web/src/main/resources/templates/beers/beer-registration.html
@@ -47,12 +47,20 @@
       <div class="row">
         <div class="col-sm-3  form-group">
           <label for="_type">Type</label>
-          <select id="_type" class="form-control" name="type">
-            <option value="" data-th-disabled="disabled" data-th-selected="selected">Select type...</option>
-            <option data-th-each="type : ${types}" data-th-value="${type.id}"
-                    data-th-text="${type.name}">Dummy type name
-            </option>
-          </select>
+          <div class="bw-field-action">
+            <select id="_type" class="form-control" name="type">
+              <option value="" data-th-disabled="disabled" data-th-selected="selected">Select type...</option>
+              <option data-th-each="type : ${types}" data-th-value="${type.id}"
+                      data-th-text="${type.name}">Dummy type name
+              </option>
+            </select>
+
+            <div class="bw-field-action__icon">
+              <a href="#" data-toggle="modal" data-target="#_beverage-type-registration-modal">
+                <span class="glyphicon  glyphicon-plus-sign  bw-glyphicon-large"></span>
+              </a>
+            </div>
+          </div>
         </div>
 
         <div class="col-sm-3  form-group">
@@ -120,6 +128,8 @@
       </div>
     </form>
   </div>
+
+  <div data-th-replace="beers/types/type-registration-modal"></div>
 </section>
 </body>
 </html>
