--- a/adapters/brewer-web/src/main/resources/templates/layout/default-layout.html
+++ b/adapters/brewer-web/src/main/resources/templates/layout/default-layout.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" data-th-href="@{/layout/stylesheets/application.css}">
   <link rel="stylesheet" data-th-href="@{/stylesheets/brewer.css}">
 
+  <link rel="icon" data-th-href="@{/images/favicon.png}">
+
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
