--- a/adapters/brewer-web/src/main/resources/templates/layout/default-layout.html
+++ b/adapters/brewer-web/src/main/resources/templates/layout/default-layout.html
@@ -46,5 +46,7 @@
 <script data-th-src="@{/layout/javascripts/algaworks.min.js}"></script>
 <script data-th-src="@{/javascripts/vendors/jquery.maskMoney.min.js}"></script>
 <script data-th-src="@{/javascripts/brewer.js}"></script>
+
+<!--/*/ <th:block layout:fragment="javascript-extra"></th:block> /*/-->
 </body>
 </html>
