--- a/adapters/brewer-web/src/main/resources/templates/beers/types/type-registration-modal.html
+++ b/adapters/brewer-web/src/main/resources/templates/beers/types/type-registration-modal.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <body>
 
-<div class="modal fade" id="_beverage-type-registration-modal" tabindex="-1" role="dialog" data-th-fragment="modal">
+<div class="modal fade" id="_beer-type-registration-modal" tabindex="-1" role="dialog" data-th-fragment="modal">
   <div class="modal-dialog  modal-md">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h4 class="modal-title">Beverage Type Registration</h4>
+        <h4 class="modal-title">Beer Type Registration</h4>
       </div>
       <div class="modal-body">
         <form class="form-horizontal">
